[package]
name = "gs_visualizer"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[dependencies]
foxglove = "0.21.0"
tism = { path = "../tism" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
libc = "0.2"

[dev-dependencies]
flatbuffers = "25.9.23"
